--- a/public/posts.css
+++ b/public/posts.css
@@ -11,6 +11,9 @@
     margin-bottom: 60px;
 }
 
+.post ion-icon:hover{ 
+    cursor: pointer;
+}
 
 .barra-topo{
     height: 60px;
@@ -53,6 +56,8 @@
     justify-content: space-between;
 }
 
+
+
 .barra-icones ion-icon{
     font-size: 22px;
     margin: 5px 10px;
@@ -60,6 +65,10 @@
 
 .barra-icones ion-icon:nth-child(2), .barra-icones ion-icon:nth-child(3){
     margin-left: 0px;
+}
+
+.curtido{
+    color: red;
 }
 
 .barra-curtidas{
